# fashion-prompt-extractor

./: .editorconfig  .env.example  .gitignore  ACCEPTANCE_CHECKLIST.txt  ACCEPTANCE_CONFIRMED.md  ACCEPTANCE_TEST_REPORT.md  ACCEPTANCE_VERIFIED.md  ALL_DONE.md  ALL_FIXES_COMPLETE.txt  ALL_FIXES_READY.txt  APP_CLEANUP_COMPLETE.md  APP_INTEGRATION_COMPLETE.txt  APP_INTEGRATION_FINAL.md  CANVAS_COMPAT_FIX.md  CANVAS_ERROR_HANDLING.md  CANVAS_FIX_COMPLETE.md  CANVAS_FIX_DEPLOYED.md  CANVAS_FIX_SUMMARY.txt  CHANGELOG.md  CLEANUP_CLOUD_ONLY.md  CLEANUP_CLOUD_ONLY_COMPLETE.md  CLEANUP_VERIFICATION.md  CLIP_IMPLEMENTATION_SUMMARY.md  CLIP_QUICKSTART.md  CLIP_UI_GUIDE.md  CLOUD_INFER_STABLE.md  CODE_QUALITY_VERIFICATION.md  COMPATIBILITY_FIX_SUMMARY.md  COMPATIBILITY_UPDATE.md  COMPLETE_ACCEPTANCE.md  CROPPER_CONTROLS_ADDED.md  CROPPER_DATAURL_FIX.md  CROPPER_DOCUMENTATION_COMPLETE.md  CROPPER_FIX_SUMMARY.txt  CROPPER_UPDATE_COMPLETE.md  CROPPER_UX_FIX.md  DATAURL_FIX_READY.txt  DEBUG_COMPONENTS_ADDED.md  DELIVERY_FINAL.md  DEPENDENCY_FIX.md  (+100 more)
.devcontainer/: devcontainer.json
.streamlit/: config.toml  secrets.toml.example
data/: eval_set.jsonl.example  fabric_aliases.json  fabric_bank.npz  fabric_centroids.npz  fabric_fine_rules.json  fabric_labels.json  fabric_rules.json  structure_keywords.json
dev/: diagnose.py  preflight.py
docs/: ARCHITECTURE_SUMMARY.md  CODE_QUALITY_GUIDE.md  EVAL_CLI_GUIDE.md  RANKER_REFACTOR_SUMMARY.md  RECOMMENDER_GUIDE.md  TYPES_GUIDE.md  UI_COMPONENTS_GUIDE.md  UI_REFACTOR_SUMMARY.md
locales/: en.json  zh.json
logs/: analysis_history.jsonl
pages/: 02_Evaluate.py
rules/: __init__.py  merge_rules.py
scripts/: build_frontend.ps1  convert_to_utf8.py  ensure_venv.ps1  format.ps1  make_rule_skeleton.py  quick_diag.ps1  scan_non_utf8.py  smoke_run.py
src/: ai_boost.py  attr_extract.py  bg_remove.py  calibrator.py  clip_infer.py  config.py  dual_clip.py  fabric_api_infer.py  fabric_clip_ranker.py  fabric_labels.py  fabric_ranker.py  features.py  i18n.py  prompt_builder.py  region_features.py  region_local.py  region_recommender.py  regionizer.py  structure_detect.py  types.py  utils.py
tests/: test_regionizer.py
tools/: CLIP_USAGE.md  IMAGE_COLLECTION_GUIDE.md  _bootstrap.py  auto_clean_images.py  benchmark_retrieval.py  build_fabric_bank.py  check_bank_size.py  check_image_quality.py  clip_train.py  download_fabric_images.py  eval_cli.py  eval_quick.py  fetch_images.py  (+17 more)
(+114 files in other folders)
